// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pension given salary of 0 (0G) getPension should match snapshot 1`] = `
Object {
  "after": 0,
  "pension": 0,
  "step1": 0,
  "step2": 0,
}
`;

exports[`pension given salary of 0 (0G) should not calculate if include is false 1`] = `
Object {
  "after": 0,
  "pension": 0,
  "step1": 0,
  "step2": 0,
}
`;

exports[`pension given salary of 111477 (1G) getPension should match snapshot 1`] = `
Object {
  "after": 111477,
  "pension": 0,
  "step1": 0,
  "step2": 0,
}
`;

exports[`pension given salary of 111477 (1G) should not calculate if include is false 1`] = `
Object {
  "after": 111477,
  "pension": 0,
  "step1": 0,
  "step2": 0,
}
`;

exports[`pension given salary of 222954 (2G) getPension should match snapshot 1`] = `
Object {
  "after": 220725,
  "pension": 2229,
  "step1": 2229,
  "step2": 0,
}
`;

exports[`pension given salary of 222954 (2G) should not calculate if include is false 1`] = `
Object {
  "after": 222954,
  "pension": 0,
  "step1": 0,
  "step2": 0,
}
`;

exports[`pension given salary of 334431 (3G) getPension should match snapshot 1`] = `
Object {
  "after": 329972,
  "pension": 4459,
  "step1": 4459,
  "step2": 0,
}
`;

exports[`pension given salary of 334431 (3G) should not calculate if include is false 1`] = `
Object {
  "after": 334431,
  "pension": 0,
  "step1": 0,
  "step2": 0,
}
`;

exports[`pension given salary of 780339 (7G) getPension should match snapshot 1`] = `
Object {
  "after": 766962,
  "pension": 13377,
  "step1": 13377,
  "step2": 0,
}
`;

exports[`pension given salary of 780339 (7G) should not calculate if include is false 1`] = `
Object {
  "after": 780339,
  "pension": 0,
  "step1": 0,
  "step2": 0,
}
`;

exports[`pension given salary of 791486 (7.1G) getPension should match snapshot 1`] = `
Object {
  "after": 777886,
  "pension": 13600,
  "step1": 13600,
  "step2": 0,
}
`;

exports[`pension given salary of 791486 (7.1G) should not calculate if include is false 1`] = `
Object {
  "after": 791486,
  "pension": 0,
  "step1": 0,
  "step2": 0,
}
`;

exports[`pension given salary of 891816 (8G) getPension should match snapshot 1`] = `
Object {
  "after": 876210,
  "pension": 15606,
  "step1": 13600,
  "step2": 2006,
}
`;

exports[`pension given salary of 891816 (8G) should not calculate if include is false 1`] = `
Object {
  "after": 891816,
  "pension": 0,
  "step1": 0,
  "step2": 0,
}
`;

exports[`pension given salary of 1226247 (11G) getPension should match snapshot 1`] = `
Object {
  "after": 1203952,
  "pension": 22295,
  "step1": 13600,
  "step2": 8695,
}
`;

exports[`pension given salary of 1226247 (11G) should not calculate if include is false 1`] = `
Object {
  "after": 1226247,
  "pension": 0,
  "step1": 0,
  "step2": 0,
}
`;

exports[`pension given salary of 1337724 (12G) getPension should match snapshot 1`] = `
Object {
  "after": 1313200,
  "pension": 24524,
  "step1": 13600,
  "step2": 10924,
}
`;

exports[`pension given salary of 1337724 (12G) should not calculate if include is false 1`] = `
Object {
  "after": 1337724,
  "pension": 0,
  "step1": 0,
  "step2": 0,
}
`;

exports[`pension given salary of 1672155 (15G) getPension should match snapshot 1`] = `
Object {
  "after": 1647631,
  "pension": 24524,
  "step1": 13600,
  "step2": 10924,
}
`;

exports[`pension given salary of 1672155 (15G) should not calculate if include is false 1`] = `
Object {
  "after": 1672155,
  "pension": 0,
  "step1": 0,
  "step2": 0,
}
`;

exports[`pension should have defaults matching snapshot 1`] = `
Object {
  "pension": Object {
    "include": true,
    "step1": Object {
      "rate": 2,
      "threshold": Object {
        "high": 791486,
        "low": 111477,
      },
    },
    "step2": Object {
      "rate": 2,
      "threshold": Object {
        "high": 1337724,
        "low": 791486,
      },
    },
  },
}
`;
